# hilsim

./: .gitignore
Dynamics/ps3_joy_thrusters/msg/: ActuatorMessage.msg  JolnerActuators.msg
Dynamics/ps3_joy_thrusters/src/: main.cpp
Dynamics/ps3_thrust_input/: CMakeLists.txt  package.xml
Dynamics/ps3_thrust_input/src/: main.cpp
Dynamics/simulator_messages/: CMakeLists.txt
Dynamics/simulator_messages/msg/: AIS.msg  ActuatorMessage.msg  Environment.msg  Gps.msg  detectedTarget.msg  obstacleCmd.msg  obstacleUpdate.msg  targetPosMsg.msg
Dynamics/simulator_prototype/: package.xml
Dynamics/simulator_prototype/config/: SimulationParameters.yaml
Dynamics/simulator_prototype/html/: annotated.html  class_g_p_s-members.html  class_g_p_s.html  class_g_p_s__coll__graph.map  class_g_p_s__inherit__graph.md5  class_i_m_u-members.html  class_i_m_u.html  class_i_m_u__coll__graph.md5  class_m_r_u-members.html  class_m_r_u.html  class_m_r_u__inherit__graph.map  class_m_r_u__inherit__graph.md5  class_numerical_solver-members.html  class_numerical_solver.html  class_sensor-members.html  class_sensor__inherit__graph.map  class_sensor__inherit__graph.md5  class_speed_sensor-members.html  class_speed_sensor.html  class_speed_sensor__coll__graph.map  class_speed_sensor__inherit__graph.md5  class_vessel-members.html  class_vessel.html  class_vessel_node-members.html  class_vessel_node__coll__graph.map  class_weather-members.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  gps_8h_source.html  imu_8h_source.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.md5  inherit_graph_5.map  inherits.html  (+6 more)
Dynamics/simulator_prototype/include/: actuatormodel.h  gps.h  imu.h  mru.h  sensor.h  solver.h  speedsensor.h  vessel.h  vesselnode.h  weather.h
Dynamics/simulator_prototype/latex/: annotated.tex  class_g_p_s.eps  class_g_p_s.tex  class_i_m_u.eps  class_i_m_u.tex  class_m_r_u.eps  class_m_r_u.tex  class_m_r_u__coll__graph.md5  class_numerical_solver.tex  class_sensor.eps  class_sensor.tex  class_vessel.tex  (+10 more)
Dynamics/txt_to_actuator_info/: CMakeLists.txt  Jolner.stl  Output2.txt  Output3.txt  test.yaml
controller/: CMakeLists.txt  package.xml
controller/include/: controller.h  waypointController.h
controller/src/: controller.cpp  main.cpp  waypointController.cpp
environment/: CMakeLists.txt  package.xml
environment/config/: dynamics_params.yaml  obstacle_params.yaml  obstacle_params_octagon.yaml  obstacle_params_simple_scenario.yaml  sensor_params.yaml  sensor_params_zero_noise.yaml  tempships.txt
environment/launch/: busy_open_sea_scenario.launch  short_mission_Odin.launch
environment/msg/: obstacleUpdate.msg
environment/src/: environment.cpp  gps.cpp  gps.h  gpsTools.cpp  gpsTools.h  navData.cpp  navData.h  obstacleControl.cpp  obstacleControl.h  obstacleManager.cpp  obstacleManager.h  readme.txt  sensorsim.cpp  sensorsim.h  simObject.cpp  simObject.h  src.pro  targetDetection.cpp  targetDetection.h
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gui/: CMakeLists.txt  moc_qcustomplot.cxx_parameters  package.xml
gui/build-src-Desktop-Debug/: Makefile  ui_mainwindow.h
gui/src/: RVIZ_Interface.cpp  RVIZ_Interface.h  detectedTargetVisualizer.cpp  detectedTargetVisualizer.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cxx_parameters  moc_obstacleinterface.cxx_parameters  moc_posUpdateHandler.cxx_parameters  moc_realtimeplot.cxx_parameters  moc_satelliteview.cxx_parameters  moc_watchDog.cxx_parameters  obstacleinterface.cpp  obstacleinterface.h  posUpdateHandler.cpp  posUpdateHandler.h  realtimeplot.cpp  realtimeplot.h  satelliteview.cpp  satelliteview.h  src.pro  watchDog.h
ps3_joy_thrusters/: CMakeLists.txt  package.xml
ps3_joy_thrusters/src/: ps3.h
simulator_messages/: package.xml
simulator_prototype/: CMakeLists.txt
simulator_prototype/config/: SimulationParameters.yaml
simulator_prototype/config/models/: Jolner.yaml  Odin.urdf  Odin.yaml  Odin2.yaml
simulator_prototype/html/: class_i_m_u__coll__graph.map  class_sensor.html  class_vessel_node.html  class_vessel_node__coll__graph.md5  class_weather.html  hierarchy.html  inherit_graph_0.map  inherit_graph_1.map  inherit_graph_4.map  inherit_graph_5.md5  mru_8h_source.html  sensor_8h_source.html  speedsensor_8h_source.html
simulator_prototype/html/search/: all_3.js  classes_7.js  searchdata.js
simulator_prototype/include/: actuatormodel.h  current.h  gps.h  sensor.h  vessel.h  vesselnode.h  waves.h  wind.h  windsensor.h
simulator_prototype/latex/: class_g_p_s__inherit__graph.md5  class_i_m_u__coll__graph.md5  hierarchy.tex  structpub_sub_helper.tex
simulator_prototype/launch/: pregeneratedThrustOdin.launch  pregeneratedThrustOdinNoLog.launch  ps3Jolner.launch  ps3Odin.launch  receiveThrustOdin.launch
simulator_prototype/logs/: run_2017-03-30-15-58-01.bag  run_2017-03-30-15-58-22.bag  run_2017-03-30-15-59-02.bag  run_2017-03-30-16-37-38.bag  run_2017-03-30-16-45-53.bag  run_2017-03-31-10-28-52.bag  run_2017-03-31-10-29-25.bag  run_2017-03-31-11-00-42.bag  run_2017-03-31-11-17-26.bag  run_2017-03-31-12-26-54.bag  run_2017-03-31-12-30-13.bag  run_2017-03-31-12-30-37.bag  run_2017-03-31-12-31-25.bag  run_2017-03-31-12-32-13.bag  run_2017-03-31-12-34-10.bag  run_2017-03-31-12-35-06.bag  run_2017-03-31-12-36-27.bag  run_2017-03-31-12-39-09.bag  run_2017-03-31-12-43-00.bag  run_2017-03-31-12-43-28.bag  run_2017-03-31-12-45-17.bag  run_2017-03-31-12-45-37.bag
simulator_prototype/src/: current.cpp  imu.cpp  solver.cpp  vessel.cpp  vesselnode.cpp  waves.cpp  wind.cpp  windsensor.cpp
simulator_prototype/xml/: class_i_m_u.xml  class_vessel_node.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  gps_8cpp.xml  imu_8cpp.xml  namespace_eigen.xml  sensor_8h.xml  solver_8cpp.xml  speedsensor_8h.xml  structpub_sub_helper.xml  vesselnode_8h.xml  weather_8cpp.xml  weather_8h.xml
txt_to_actuator_info/: package.xml
(+117 files in other folders)
